<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9e9e9e"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.digitalgreen.www.loopadmin.AddGaddidar">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/gaddidarSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
        android:elevation="10dp"
        android:src="@mipmap/ic_tick" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/gaddidarDiscardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:elevation="10dp"
        android:src="@mipmap/ic_cancel" />


    <TextView
        android:id="@+id/gaddidarHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/gaddidar_heading"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/gaddidarPic"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gaddidarHeading"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_default_camera" />

    <EditText
        android:id="@+id/gaddidarName"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_view_height"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/gaddidarPic"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/gaddidarPic"
        android:background="@drawable/round_corner"
        android:ems="10"
        android:hint="@string/gaddidar_name_hint"
        android:inputType="textPersonName"
        android:padding="8dp" />

    <EditText
        android:id="@+id/gaddidarPhoneNo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_view_height"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gaddidarName"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/gaddidarPic"
        android:background="@drawable/round_corner"
        android:ems="10"
        android:hint="@string/gaddidar_phone_hint"
        android:inputType="phone"
        android:padding="8dp" />

    <TextView
        android:id="@+id/gaddidarPhotoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/gaddidarPic"
        android:layout_alignLeft="@+id/gaddidarPic"
        android:layout_alignRight="@+id/gaddidarPic"
        android:layout_alignStart="@+id/gaddidarPic"
        android:layout_below="@+id/gaddidarPic"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical|center_horizontal"
        android:padding="5dp"
        android:text="Click a Photo of Gaddidar"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />


    <EditText
        android:id="@+id/gaddidarCommission"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_view_height"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gaddidarPhoneNo"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/gaddidarPic"
        android:background="@drawable/round_corner"
        android:ems="10"
        android:hint="@string/gaddidar_commision_hint"
        android:inputType="numberDecimal"
        android:padding="8dp" />

    <TextView
        android:id="@+id/gaddidarSelectMandi"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_height"
        android:layout_below="@id/gaddidarCommission"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_corner"
        android:drawableRight="@drawable/dropdown_icon_small"
        android:gravity="center_vertical"
        android:text="@string/gaddidar_mandi_hint"
        android:textSize="18sp"
        android:paddingLeft="8dp" />

</RelativeLayout>
